modificacion header, se agrego :hover

--- a/pages/pico-bolivar.html
+++ b/pages/pico-bolivar.html
@@ -21,8 +21,10 @@
 <body>
     <header>
         <nav class="menu">
+            <div>
+                <a class="Logo" href="../index.html"><img src="../assets/img/Venezuelaslogo.png" alt="Inicio"></a>
+            </div>
             <ul>
-                <li><a class="Logo" href="../index.html"><img src="../assets/img/Venezuelaslogo.png" alt="Inicio"></a></li>
                 <li><a href="./canaima.html">Canaima</a></li>
                 <li><a href="./los-roques.html">Los Roques</a></li>
                 <li><a href="./morrocoy.html">Morrocoy</a></li>
