pequeñas modificaciones, responsive en las 5pages a 768p, nueva page contacto

--- a/pages/canaima.html
+++ b/pages/canaima.html
@@ -50,9 +50,8 @@
         <div class="container">
             <img src="../assets/img/canaima-salto-angel.png" class="imagenCentrada" alt="Salto Angel">
         </div>
-        <div class="gridContainer">
-            <article class="gridItem">
-                <h2>Salto Ángel</h2>
+        <div class="gridContainerCanaima">
+            <article class="gridItemCanaima">
                     <p>¡Descubre la majestuosidad del Salto Ángel en el corazón del Parque Nacional Canaima! Con sus impresionantes 
                     979 metros de altura, es la cascada más alta del mundo, una maravilla natural que te dejará sin aliento. Contempla 
                     cómo las aguas caen desde lo alto del tepuy Auyantepui, creando un espectáculo visual incomparable. Embárcate en 
