--- a/pages/los-roques.html
+++ b/pages/los-roques.html
@@ -54,6 +54,31 @@
                 allowfullscreen>
             </iframe>
         </div>
+        <div class="gridContainerRoques">
+            <article class="gridItemRoques">
+                    <p>Con un clima tropical cálido durante todo el año y aguas cristalinas de color turquesa, Los Roques 
+                        es el destino perfecto para los amantes del sol y el mar.
+                        <br>
+                        <br>
+                        Sumérgete en las aguas cristalinas y explora los arrecifes de coral mientras practicas snorkel y 
+                        buceo, descubriendo la increíble biodiversidad marina que habita en este paraíso submarino. 
+                        Además, Los Roques es ideal par a practicar deportes acuáticos como el kitesurf y el windsurf, 
+                        aprovechando los vientos constantes y las condiciones perfectas de sus playas.
+                        <br>
+                        <br>
+                        Relájate en las mejores playas del archipiélago, como la paradisíaca Cayo de Agua, con sus arenas 
+                        blancas y aguas tranquilas, o la tranquila Madrisquí, perfecta para tomar el sol y disfrutar de un día de playa en 
+                        completa serenidad.
+                        <br>
+                        <br>
+                        Con su combinación perfecta de actividades deportivas, clima tropical y playas espectaculares, el 
+                        Archipiélago de Los Roques te ofrece una experiencia única en un entorno caribeño de ensueño.
+                    </p>
+            </article>
+            <article>
+                <img src="../assets/img/LosRoquespueblo.jpg" class="imgArticuleRight" alt="Navegando en curiara por el rio de Canaima">
+            </article>
+        </div>
     </main>
     <footer>
         <nav class="footerStyle">
