--- a/pages/morrocoy.html
+++ b/pages/morrocoy.html
@@ -48,8 +48,8 @@
         <div class="container">
             <img src="../assets/img/encabezadoMorrocoy.png" class="imagenCentrada" alt="Playa en Morrocoy">
         </div>
-        <div class="gridContainer">
-            <article class="gridItem">
+        <div class="gridContainerMorrocoy">
+            <article class="gridItemMorrocoy">
                     <p>Morrocoy alberga una rica diversidad de fauna marina y costera que fascina a los visitantes. En sus aguas cristalinas y 
                         arrecifes de coral, es posible encontrar una gran variedad de peces tropicales, como pargos, meros, sábalos, y muchos más, así como crustáceos, moluscos y diversas especies de corales. Además, las playas y manglares del parque son el hábitat de aves costeras como garzas, pelícanos, flamencos y gaviotas.
                         En cuanto a las actividades acuáticas, el Parque Nacional Morrocoy ofrece una experiencia incomparable para los 
