--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <style>
         header {
-            background-image: url(./assets/img/playa-indexTitulo.png);
+            background-image: url(./assets/img/playa-index.png);
             background-size: cover;
             background-position: center;
             height: 1024px;
@@ -30,6 +30,10 @@
                 <li><a href="./pages/pico-bolivar.html">Pico Bólivar</a></li>
             </ul>
         </nav>
+        <div class="titulo">
+            <h2 class="descubre">Descubre</h2>
+            <h1 class="mainTitle">Venezuela</h1>
+        </div>
     </header>
     <main>
         <p class="introText">¡Explora la diversidad natural de Venezuela, un destino turístico cautivador 
@@ -40,41 +44,41 @@
         belleza y la aventura que te esperan en Venezuela!</p>
         <div class="gridContainer">
             <article class="gridItem">
-                <a href="./pages/canaima.html">
+                <a class="imgArticule" href="./pages/canaima.html">
                     <img src="./assets/img/indexCanaima1.png">
                 </a>
-                <h2>Canaima</h2>
-                <p>Uno de los parques más grandes y espectaculares del mundo, declarado Patrimonio de la Humanidad por 
+                <h2 class="h2Articule">Canaima</h2>
+                <p class="pArticule">Uno de los parques más grandes y espectaculares del mundo, declarado Patrimonio de la Humanidad por 
                 la UNESCO. Su principal atractivo son los tepuyes, unas impresionantes mesetas de roca que se elevan 
                 sobre la selva y que albergan cataratas únicas, como el Salto Ángel, la caída de agua más alta del 
                 planeta.</p>
             </article>
             <article class="gridItem">
-                <a href="./pages/los-roques.html">
+                <a class="imgArticule" href="./pages/los-roques.html">
                     <img src="./assets/img/LosRoquesIndex.png" alt="Imagen aerea de Los Roques">
                 </a>
-                <h2>Los Roques</h2>
-                <p>Un conjunto de islas y cayos de origen coralino, que forman parte de un parque nacional marino.
+                <h2 class="h2Articule">Los Roques</h2>
+                <p class="pArticule">Un conjunto de islas y cayos de origen coralino, que forman parte de un parque nacional marino.
                 Sus playas de arena blanca y aguas cristalinas son perfectas para el buceo, el snorkel y el kitesurf.
                 Además, se puede disfrutar de la gastronomía local, basada en el pescado y el marisco, y de la vida 
                 nocturna en la isla principal, El Gran Roque.</p>
             </article>
             <article class="gridItem">
-                <a href="./pages/pico-bolivar.html">
-                    <img src="./assets/img/IndexPicoBolivar.png" alt="Pico Bolivar con manto de nieve">
+                <a class="imgArticule" href="./pages/pico-bolivar.html">
+                    <img  src="./assets/img/IndexPicoBolivar.png" alt="Pico Bolivar con manto de nieve">
                 </a>
-                <h2>Pico Bólivar</h2>
-                <p>El punto más alto de Venezuela, con 4.978 metros de altura, ubicado en la cordillera de los Andes. 
+                <h2 class="h2Articule">Pico Bólivar</h2>
+                <p class="pArticule">El punto más alto de Venezuela, con 4.978 metros de altura, ubicado en la cordillera de los Andes. 
                 Se puede acceder a su cima mediante el teleférico de Mérida, el más largo y alto del mundo, que ofrece 
                 unas vistas panorámicas incomparables. El pico Bolívar es también un destino para los amantes del 
                 montañismo, que pueden ascender por sus rutas de escalada y disfrutar de la nieve y el paisaje alpino.</p>
             </article>
             <article class="gridItem">
-                <a href="./pages/morrocoy.html">
-                    <img src="./assets/img/IndexMorrocoy.png" alt="Playa en Morrocoy">
+                <a class="imgArticule" href="./pages/morrocoy.html">
+                    <img  src="./assets/img/IndexMorrocoy.png" alt="Playa en Morrocoy">
                 </a>
-                <h2>Morrocoy</h2>
-                <p>Otro parque nacional que protege una zona de manglares, islotes y arrecifes de coral en el golfo Triste. 
+                <h2 class="h2Articule">Morrocoy</h2>
+                <p class="pArticule">Otro parque nacional que protege una zona de manglares, islotes y arrecifes de coral en el golfo Triste. 
                 Sus playas son ideales para el descanso y el sol, y sus fondos marinos alberga n una gran variedad de 
                 especies. También se pueden avistar delfines, tortugas y caimanes en algunos sectores del parque.</p>
             </article>
@@ -83,7 +87,7 @@
     <footer>
         <nav class="footerStyle">
             <ul>
-                <li>Contacto</li>
+                <li><a href="./pages/contacto.html">Contacto</a></li>
                 <li>Nosotros</li>
                 <li>Copyright</li>
                 <li><a href="https://www.instagram.com/" target="_blank">
