--- a/pages/los-roques.html
+++ b/pages/los-roques.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Los Roques</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <style>
             header {
@@ -49,7 +50,7 @@
             Con su combinación perfecta de aventura y relajación, el Archipiélago de Los Roques te ofrece una experiencia inolvidable 
             en un entorno paradisíaco. ¡Ven y descubre la magia de Los Roques en Venezuela!</p>
         <div class="iframeYT">
-            <iframe width="1300" height="700" src="https://www.youtube.com/embed/NfIOSWT_Yb4?si=G2_zc-jiYls6rjK5" title="Descubre Los Roques" 
+            <iframe width="1200" height="700" src="https://www.youtube.com/embed/NfIOSWT_Yb4?si=G2_zc-jiYls6rjK5" title="Descubre Los Roques" 
                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                 allowfullscreen>
             </iframe>
@@ -75,9 +76,41 @@
                         Archipiélago de Los Roques te ofrece una experiencia única en un entorno caribeño de ensueño.
                     </p>
             </article>
-            <article>
-                <img src="../assets/img/LosRoquespueblo.jpg" class="imgArticuleRight" alt="Navegando en curiara por el rio de Canaima">
-            </article>
+            <articule id="carouselExampleCaptions" class="carousel slide">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="../assets/img/LosRoquespueblo.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Pueblo costero en los Roques</h5>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="../assets/img/slideRoques2.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Windsurf en Los Roques</h5>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="../assets/img/slideRoques3.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Arhipielago de Los Roques</h5>
+                    </div>
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+            </articule>
         </div>
     </main>
     <footer>
@@ -95,5 +128,7 @@
             </ul>
         </nav>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
 </html>
