barra navegacion responsive

--- a/index.html
+++ b/index.html
@@ -20,17 +20,26 @@
 </head>
 <body>
     <header>
-        <nav class="menu">
-            <div>
-                <a class="Logo" href="#"><img src="./assets/img/Venezuelaslogo.png" alt="Inicio"></a>
-            </div>
-            <ul>
-                <li><a href="./pages/canaima.html">Canaima</a></li>
-                <li><a href="./pages/los-roques.html">Los Roques</a></li>
-                <li><a href="./pages/morrocoy.html">Morrocoy</a></li>
-                <li><a href="./pages/pico-bolivar.html">Pico Bólivar</a></li>
-            </ul>
-        </nav>
+        <div class="nav-container">
+            <nav class="navbar navbar-expand-lg shadow" data-bs-theme="dark">
+                <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img class="Logo" src="./assets/img/Venezuelaslogo.png" alt=""></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                    <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                    <a class="nav-link" href="./pages/canaima.html">Canaima</a>
+                    <a class="nav-link" href="./pages/los-roques.html">Los Roques</a>
+                    <a class="nav-link" href="./pages/morrocoy.html">Morrocoy</a>
+                    <a class="nav-link" href="./pages/pico-bolivar.html">Pico Bólivar</a>
+                    </div>
+                </div>
+                </div>
+            </nav>
+        </div>
         <div class="titulo">
             <h2 class="descubre">Descubre</h2>
             <h1 class="mainTitle">Venezuela</h1>
@@ -56,7 +65,7 @@
             </article>
             <article class="gridItem">
                 <a class="imgArticule" href="./pages/los-roques.html">
-                    <img src="./assets/img/LosRoquesIndex.png" alt="Imagen aerea de Los Roques">
+                    <img class="slide-right" src="./assets/img/LosRoquesIndex.png" alt="Imagen aerea de Los Roques">
                 </a>
                 <h2 class="h2Articule">Los Roques</h2>
                 <p class="pArticule">Un conjunto de islas y cayos de origen coralino, que forman parte de un parque nacional marino.
@@ -100,5 +109,7 @@
             </ul>
         </nav>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
 </html>
