--- a/pages/canaima.html
+++ b/pages/canaima.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <style>
       header {
-        background-image: url(../assets/img/headerCanaima.png);
+        background-image: url(../assets/img/headerCanaima2.jpg);
         background-size: cover;
         background-position: center;
         height: 1024px;
@@ -21,21 +21,30 @@
 </head>
 <body>
     <header>
-        <nav class="menu">
-            <div>
-                <a class="Logo" href="../index.html"><img src="../assets/img/Venezuelaslogo.png" alt="Inicio"></a>
+      <div class="nav-container">
+        <nav class="navbar navbar-expand-lg shadow" data-bs-theme="light">
+            <div class="container-fluid">
+            <a class="navbar-brand" href="../index.html">
+                <img class="Logo" src="../assets/img/Venezuelaslogo.png" alt=""></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                <a class="nav-link" href="#">Canaima</a>
+                <a class="nav-link" href="../pages/los-roques.html">Los Roques</a>
+                <a class="nav-link" href="../pages/morrocoy.html">Morrocoy</a>
+                <a class="nav-link" href="../pages/pico-bolivar.html">Pico Bólivar</a>
+                </div>
             </div>
-            <ul>
-                <li><a href="#">Canaima</a></li>
-                <li><a href="./los-roques.html">Los Roques</a></li>
-                <li><a href="./morrocoy.html">Morrocoy</a></li>
-                <li><a href="./pico-bolivar.html">Pico Bólivar</a></li>
-            </ul>
+            </div>
         </nav>
-        <div class="titulo">
-            <h2 class="descubre">Descubre</h2>
-            <h1 class="mainTitle">Canaima</h1>
-        </div>
+    </div>
+      <div class="titulo">
+        <h2 class="descubre">Descubre</h2>
+        <h1 class="mainTitle">Canaima</h1>
+      </div>
     </header>
     <main>
         <p class="introText">¡Bienvenidos al increíble Parque Nacional Canaima en Venezuela, un paraíso natural que te 
