--- a/pages/los-roques.html
+++ b/pages/los-roques.html
@@ -20,23 +20,32 @@
     </style>
 </head>
 <body>
-    <header>
-        <nav class="menu">
-            <div>
-                <a class="Logo" href="../index.html"><img src="../assets/img/Venezuelaslogo.png" alt="Inicio"></a>
-            </div>
-            <ul>
-                <li><a href="./canaima.html">Canaima</a></li>
-                <li><a href="#">Los Roques</a></li>
-                <li><a href="./morrocoy.html">Morrocoy</a></li>
-                <li><a href="./pico-bolivar.html">Pico Bólivar</a></li>
-            </ul>
-        </nav>
-        <div class="tituloRoques">
-            <h2 class="descubre">Descubre</h2>
-            <h1 class="mainTitle">Los Roques</h1>
-        </div>
-    </header>
+  <header>
+    <div class="nav-container">
+      <nav class="navbar navbar-expand-lg shadow" data-bs-theme="dark">
+          <div class="container-fluid">
+          <a class="navbar-brand" href="../index.html">
+              <img class="Logo" src="../assets/img/Venezuelaslogo.png" alt=""></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+              <a class="nav-link" href="../pages/canaima.html">Canaima</a>
+              <a class="nav-link" href="#">Los Roques</a>
+              <a class="nav-link" href="../pages/morrocoy.html">Morrocoy</a>
+              <a class="nav-link" href="../pages/pico-bolivar.html">Pico Bólivar</a>
+              </div>
+          </div>
+          </div>
+      </nav>
+    </div>
+    <div class="tituloRoques">
+      <h2 class="descubre">Descubre</h2>
+      <h1 class="mainTitle">Los Roques</h1>
+    </div>
+  </header>
     <main>
         <p class="introText">¡Bienvenido al impresionante Archipiélago de Los Roques en Venezuela, un paraíso caribeño que te dejará 
             sin aliento! Con sus aguas cristalinas, playas de arena blanca y una biodiversidad marina incomparable, Los Roques es 
@@ -50,7 +59,7 @@
             Con su combinación perfecta de aventura y relajación, el Archipiélago de Los Roques te ofrece una experiencia inolvidable 
             en un entorno paradisíaco. ¡Ven y descubre la magia de Los Roques en Venezuela!</p>
         <div class="iframeYT">
-            <iframe width="1200" height="700" src="https://www.youtube.com/embed/NfIOSWT_Yb4?si=G2_zc-jiYls6rjK5" title="Descubre Los Roques" 
+            <iframe src="https://www.youtube.com/embed/NfIOSWT_Yb4?si=G2_zc-jiYls6rjK5" title="Descubre Los Roques" 
                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                 allowfullscreen>
             </iframe>
