--- a/pages/morrocoy.html
+++ b/pages/morrocoy.html
@@ -21,17 +21,26 @@
 </head>
 <body>
     <header>
-        <nav class="menu">
-            <div>
-                <a class="Logo" href="../index.html"><img src="../assets/img/Venezuelaslogo.png" alt="Inicio"></a>
+      <div class="nav-container">
+        <nav class="navbar navbar-expand-lg shadow" data-bs-theme="dark">
+            <div class="container-fluid">
+            <a class="navbar-brand" href="../index.html">
+                <img class="Logo" src="../assets/img/Venezuelaslogo.png" alt=""></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                <a class="nav-link" href="../pages/canaima.html">Canaima</a>
+                <a class="nav-link" href="../pages/los-roques.html">Los Roques</a>
+                <a class="nav-link" href="#">Morrocoy</a>
+                <a class="nav-link" href="../pages/pico-bolivar.html">Pico Bólivar</a>
+                </div>
             </div>
-            <ul>
-                <li><a href="./canaima.html">Canaima</a></li>
-                <li><a href="./los-roques.html">Los Roques</a></li>
-                <li><a href="#">Morrocoy</a></li>
-                <li><a href="./pico-bolivar.html">Pico Bólivar</a></li>
-            </ul>
+            </div>
         </nav>
+    </div>
         <div class="titulo">
             <h2 class="descubre">Descubre</h2>
             <h1 class="mainTitle">Morrocoy</h1>
@@ -47,7 +56,7 @@
             emocionantes, el Parque Nacional Morrocoy es el destino perfecto para los amantes del mar y la naturaleza. ¡Ven y 
             descubre la belleza de Morrocoy en Venezuela!</p>
         <div class="container">
-            <img src="../assets/img/encabezadoMorrocoy.png" class="imagenCentrada" alt="Playa en Morrocoy">
+            <img src="../assets/img/encabezadoMorrocoy2.png" class="imagenCentrada" alt="Playa en Morrocoy">
         </div>
         <div class="gridContainerMorrocoy">
             <article class="gridItemMorrocoy">
