--- a/pages/pico-bolivar.html
+++ b/pages/pico-bolivar.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pico Bólivar</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <style>
             header {
@@ -20,17 +21,26 @@
 </head>
 <body>
     <header>
-        <nav class="menu">
-            <div>
-                <a class="Logo" href="../index.html"><img src="../assets/img/Venezuelaslogo.png" alt="Inicio"></a>
-            </div>
-            <ul>
-                <li><a href="./canaima.html">Canaima</a></li>
-                <li><a href="./los-roques.html">Los Roques</a></li>
-                <li><a href="./morrocoy.html">Morrocoy</a></li>
-                <li><a href="#">Pico Bólivar</a></li>
-            </ul>
-        </nav>
+        <div class="nav-container">
+            <nav class="navbar navbar-expand-lg shadow" data-bs-theme="light">
+                <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html">
+                    <img class="Logo" src="../assets/img/Venezuelaslogo.png" alt=""></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                    <a class="nav-link" href="../pages/canaima.html">Canaima</a>
+                    <a class="nav-link" href="../pages/los-roques.html">Los Roques</a>
+                    <a class="nav-link" href="../pages/morrocoy.html">Morrocoy</a>
+                    <a class="nav-link" href="#">Pico Bólivar</a>
+                    </div>
+                </div>
+                </div>
+            </nav>
+        </div>
         <div class="titulo">
             <h2 class="descubre">Descubre</h2>
             <h1 class="mainTitle">El pico Bólivar</h1>
@@ -99,5 +109,7 @@
             </ul>
         </nav>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
 </html>
