--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         <div class="nav-container">
             <nav class="navbar navbar-expand-lg shadow" data-bs-theme="dark">
                 <div class="container-fluid">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand ms-auto" href="#">
                     <img class="Logo" src="./assets/img/Venezuelaslogo.png" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                     <a class="nav-link active" aria-current="page" href="#">Inicio</a>
                     <a class="nav-link" href="./pages/canaima.html">Canaima</a>
@@ -42,7 +42,7 @@
         </div>
         <div class="titulo">
             <h2 class="descubre">Descubre</h2>
-            <h1 class="mainTitle">Venezuela</h1>
+            <h1 class="mainTitle text-focus-in">Venezuela</h1>
         </div>
     </header>
     <main>
@@ -54,8 +54,8 @@
         belleza y la aventura que te esperan en Venezuela!</p>
         <div class="gridContainer">
             <article class="gridItem">
-                <a class="imgArticule" href="./pages/canaima.html">
-                    <img src="./assets/img/indexCanaima1.png">
+                <a href="./pages/canaima.html">
+                    <img class="imgArticule" src="./assets/img/indexCanaima1.png">
                 </a>
                 <h2 class="h2Articule">Canaima</h2>
                 <p class="pArticule">Uno de los parques más grandes y espectaculares del mundo, declarado Patrimonio de la Humanidad por 
@@ -64,8 +64,8 @@
                 planeta.</p>
             </article>
             <article class="gridItem">
-                <a class="imgArticule" href="./pages/los-roques.html">
-                    <img class="slide-right" src="./assets/img/LosRoquesIndex.png" alt="Imagen aerea de Los Roques">
+                <a href="./pages/los-roques.html">
+                    <img class="imgArticule" src="./assets/img/LosRoquesIndex.png" alt="Imagen aerea de Los Roques">
                 </a>
                 <h2 class="h2Articule">Los Roques</h2>
                 <p class="pArticule">Un conjunto de islas y cayos de origen coralino, que forman parte de un parque nacional marino.
@@ -74,8 +74,8 @@
                 nocturna en la isla principal, El Gran Roque.</p>
             </article>
             <article class="gridItem">
-                <a class="imgArticule" href="./pages/pico-bolivar.html">
-                    <img  src="./assets/img/IndexPicoBolivar.png" alt="Pico Bolivar con manto de nieve">
+                <a href="./pages/pico-bolivar.html">
+                    <img class="imgArticule" src="./assets/img/IndexPicoBolivar.png" alt="Pico Bolivar con manto de nieve">
                 </a>
                 <h2 class="h2Articule">Pico Bólivar</h2>
                 <p class="pArticule">El punto más alto de Venezuela, con 4.978 metros de altura, ubicado en la cordillera de los Andes. 
@@ -84,8 +84,8 @@
                 montañismo, que pueden ascender por sus rutas de escalada y disfrutar de la nieve y el paisaje alpino.</p>
             </article>
             <article class="gridItem">
-                <a class="imgArticule" href="./pages/morrocoy.html">
-                    <img  src="./assets/img/IndexMorrocoy.png" alt="Playa en Morrocoy">
+                <a href="./pages/morrocoy.html">
+                    <img class="imgArticule" src="./assets/img/IndexMorrocoy.png" alt="Playa en Morrocoy">
                 </a>
                 <h2 class="h2Articule">Morrocoy</h2>
                 <p class="pArticule">Otro parque nacional que protege una zona de manglares, islotes y arrecifes de coral en el golfo Triste. 
