--- a/pages/canaima.html
+++ b/pages/canaima.html
@@ -24,12 +24,12 @@
       <div class="nav-container">
         <nav class="navbar navbar-expand-lg shadow" data-bs-theme="light">
             <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html">
+            <a class="navbar-brand ms-auto" href="../index.html">
                 <img class="Logo" src="../assets/img/Venezuelaslogo.png" alt=""></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                 <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                 <a class="nav-link" href="#">Canaima</a>
@@ -43,7 +43,7 @@
     </div>
       <div class="titulo">
         <h2 class="descubre">Descubre</h2>
-        <h1 class="mainTitle">Canaima</h1>
+        <h1 class="mainTitle text-focus-in">Canaima</h1>
       </div>
     </header>
     <main>
@@ -69,6 +69,16 @@
                     aventúrate en caminatas guiadas para acercarte aún más a esta maravilla de la naturaleza. Sumérgete en la belleza y 
                     el poder del Salto Ángel, una experiencia que quedará grabada en tu memoria para siempre. ¡No te pierdas la 
                     oportunidad de contemplar esta maravilla de Canaima!
+                    <br>
+                    <br>
+                    ¡Explora la vasta belleza del Parque Nacional Canaima en Venezuela y déjate maravillar por sus impresionantes paisajes 
+                    naturales! Además del icónico Salto Ángel, el parque alberga una diversidad de atractivos turísticos que te dejarán sin palabras.
+                    Descubre los misteriosos tepuyes, imponentes formaciones rocosas que se elevan majestuosamente sobre la selva. Adéntrate en las 
+                    profundidades del parque para descubrir las mágicas lagunas de aguas cristalinas, como la Laguna de Canaima y la Laguna de los Huesos, 
+                    donde podrás refrescarte y relajarte rodeado de una atmósfera única. Embárcate en emocionantes excursiones por los ríos y cañones del 
+                    parque, explorando cuevas, cascadas ocultas y una flora y fauna exuberantes. Vive la aventura al máximo en el Parque Nacional Canaima, 
+                    un destino que te cautivará con su esplendor natural y su diversidad de experiencias únicas. ¡No pierdas la oportunidad de descubrir este 
+                    paraíso venezolano!
                     </p>
             </article>
             <articule id="carouselExampleCaptions" class="carousel slide">
