--- a/pages/los-roques.html
+++ b/pages/los-roques.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <style>
             header {
-            background-image: url(../assets/img/headerLosRoques.png);
+            background-image: url(../assets/img/headerLosRoquesboat.png);
             background-size: cover;
             background-position: center;
             height: 1024px;
@@ -24,12 +24,12 @@
     <div class="nav-container">
       <nav class="navbar navbar-expand-lg shadow" data-bs-theme="dark">
           <div class="container-fluid">
-          <a class="navbar-brand" href="../index.html">
+          <a class="navbar-brand ms-auto" href="../index.html">
               <img class="Logo" src="../assets/img/Venezuelaslogo.png" alt=""></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
               <a class="nav-link" href="../pages/canaima.html">Canaima</a>
@@ -43,7 +43,10 @@
     </div>
     <div class="tituloRoques">
       <h2 class="descubre">Descubre</h2>
-      <h1 class="mainTitle">Los Roques</h1>
+      <h1 class="mainTitle text-focus-in">Los Roques</h1>
+    </div>
+    <div class="boat-container">
+      <img class="boat" src="../assets/img/boteweb.png" alt="">
     </div>
   </header>
     <main>
