--- a/pages/morrocoy.html
+++ b/pages/morrocoy.html
@@ -24,12 +24,12 @@
       <div class="nav-container">
         <nav class="navbar navbar-expand-lg shadow" data-bs-theme="dark">
             <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html">
+            <a class="navbar-brand ms-auto" href="../index.html">
                 <img class="Logo" src="../assets/img/Venezuelaslogo.png" alt=""></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                 <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                 <a class="nav-link" href="../pages/canaima.html">Canaima</a>
@@ -43,7 +43,7 @@
     </div>
         <div class="titulo">
             <h2 class="descubre">Descubre</h2>
-            <h1 class="mainTitle">Morrocoy</h1>
+            <h1 class="mainTitle text-focus-in">Morrocoy</h1>
         </div>
     </header>
     <main>
