--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Explora la diversidad natural de Venezuela visitando cinco destinos fascinantes: Canaima, Morrocoy, Los Roques y el Pico Bolívar. Descubre playas, montañas y más.">
+    <meta name="keywords" content="destinos turísticos en Venezuela, Canaima, Morrocoy, Los Roques, Pico Bolívar,">
     <title>Descubre Venezuela</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
@@ -55,7 +57,7 @@
         <div class="gridContainer">
             <article class="gridItem">
                 <a href="./pages/canaima.html">
-                    <img class="imgArticule" src="./assets/img/indexCanaima1.png">
+                    <img class="imgArticule" src="./assets/img/indexCanaima1.png" alt="Laguna de los huesos con el salto Angel de fondo">
                 </a>
                 <h2 class="h2Articule">Canaima</h2>
                 <p class="pArticule">Uno de los parques más grandes y espectaculares del mundo, declarado Patrimonio de la Humanidad por 
