--- a/pages/los-roques.html
+++ b/pages/los-roques.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="¡Bienvenido al impresionante Archipiélago de Los Roques en Venezuela! Descubre playas vírgenes, aguas cristalinas y una biodiversidad marina única.">
+    <meta name="keywords" content="Los Roques, Venezuela, archipiélago, playa, snorkel">
     <title>Los Roques</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
