--- a/pages/pico-bolivar.html
+++ b/pages/pico-bolivar.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="¡Descubre la majestuosidad del Pico Bolívar en Mérida, Venezuela, y sumérgete en una experiencia única en los Andes venezolanos!">
+    <meta name="keywords" content="Pico Bolívar, Mérida, Venezuela, Andes, trekking">
     <title>Pico Bólivar</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
